# automatic_matchmaking

./: .gitignore  README.md  algo_glicko2.py  benchmark_bruteforce_runtime.py  benchmark_matching_algos.py  dao.py  explanations.py  find_matchups.py  layout.py  mock_run.py  mock_run_names.py  parser.py  prep_db_from_excel.py  pseudonymize_database.py  pyproject.toml  requirements.txt  stats.py  task_logger.py  terminal_interface.py  terminal_interface_gameblock_management.py  terminal_interface_pool_management.py  viz.py
databases/: .default  my_database.json  stud1.json  stud2.json  stud3.json  stud4.json
explanations/: latest.html  latest_table.html
glicko2/: __init__.py  glicko2.py
helper/: __init__.py  cmd_with_venv.bat  tol_colors.py
helper/Likert_Scale_Plot_in_Python/: How to Use.ipynb  PlotLikertOverConditions.py
helper/tinydb_hashfs/: __init__.py  bases.py  tinydb_hashfs.py
inbox/: example_init.xlsx
matching_algos/: base_matching_algo.py  bruteforce_matching.py  bruteforce_matching_minizinc.py  double_symmetric_matching.py  fixed_order_matching.py  helpers.py  interactive_matching.py  minizinc_data.dzn  minizinc_ilp.mzn  minizinc_matching.py  minizinc_model.mzn  random_matching.py  reliable_matching.py  task_input_output.py
rating_algos/: base_rating_algo.py  baseline_win_rate.py  db_rating_lookup.py  fixed_rating_algo.py  glicko2_custom.py  simple_elo.py
